Grace/tests/gibbs/errors/t185.grace
// ERROR = P1002
class
123
